# CptS-122-PA8-YOUR-NAME

./: .gitignore  LICENSE  README.md  SECURITY.md
.github/workflows/: codeql.yml
Development/Windows/x64-proj/Visual Studio/PA 8/: PA 8.sln
Development/macOS/CLion/: CMakeLists.txt  ReviewApp.cpp
Development/macOS/CLion/Entities/: GoogleReviewEntity.hpp
Development/macOS/CLion/Tree/: NodeData.cpp  Tree.hpp  TreeBase.hpp
Development/macOS/PostgreSQL/CptS 122 - PA 8 - FIRST LAST.xcodeproj/: project.pbxproj
Development/macOS/PostgreSQL/CptS 122 - PA 8 - FIRST LAST/Database/: DbRepository.hpp  DbService.cpp
Development/macOS/PostgreSQL/CptS 122 - PA 8 - FIRST LAST/Entities/: GoogleReviewEntity.cpp  User.hpp
Development/macOS/PostgreSQL/CptS 122 - PA 8 - FIRST LAST/Tree/: NodeData.hpp
Development/macOS/PostgreSQL/CptS 122 - PA 8 - FIRST LAST/Types/: Common.hpp
Development/macOS/PostgreSQL/PostgreSQL/: DIRECTIONS.md  DbController.cpp  DbController.hpp  DbRepository.cpp  DbRepository.hpp  EnumDecoder.hpp  Enums.hpp  GoogleReviewEntity.cpp  GoogleReviewEntity.hpp  ReviewApp.cpp  ReviewApp.hpp  main.cpp
Development/macOS/PostgreSQL/PostgreSQL.xcodeproj/: project.pbxproj
Development/macOS/PostgreSQL/PostgreSQL/Analysis/: BusinessReviewAnalyzer.cpp  BusinessReviewAnalyzer.hpp
Development/macOS/PostgreSQL/PostgreSQL/Database/: DbRepository.cpp  DbRepository.hpp  DbService.cpp  DbService.hpp
Development/macOS/PostgreSQL/PostgreSQL/Entities/: GoogleReviewEntity.cpp  GoogleReviewEntity.hpp  User.cpp  User.hpp
Development/macOS/Xcode/CptS 122 - PA 8 - FIRST LAST/: DIRECTIONS.md  ReviewApp.cpp  ReviewApp.hpp  main.cpp
Development/macOS/Xcode/CptS 122 - PA 8 - FIRST LAST.xcodeproj/: project.pbxproj
Install/: Windows-Install-Phase1.ps1  Windows-Install-Phase2.ps1  Windows-Install.ps1  linux-install.zsh
Install/Windows/: INSTALL_WINDOWS.MD  Windows-Install-Phase1.ps1  Windows-Install-Phase2.ps1
Install/macOS/: INSTALL_MACOS.MD  macos-install.zsh
(+29 files in other folders)
